--- a/OuFood/app/src/main/res/layout/activity_sale_list.xml
+++ b/OuFood/app/src/main/res/layout/activity_sale_list.xml
@@ -6,13 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:background="@color/white"
     tools:context=".Activity.FoodListActivity">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:scaleType="centerCrop"
-        android:src="@drawable/main_bg" />
 
     <LinearLayout
         android:layout_width="match_parent"
