--- a/OuFood/app/src/main/res/menu/menu_rating_activity.xml
+++ b/OuFood/app/src/main/res/menu/menu_rating_activity.xml
@@ -4,7 +4,7 @@
 
     <item
         android:id="@+id/action_send"
-        android:icon="@drawable/ic_send"
+        android:icon="@drawable/send_ic"
         android:title="Send"
         app:showAsAction="always" />
 
