--- a/OuFood/app/src/main/res/values/colors.xml
+++ b/OuFood/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="red">#f92a0d</color>
     <color name="gray">#F5F5F5</color>
     <color name="yellow">#FFD700</color>
+    <color name="green">#008000</color>
 
     <color name="platinum">#E8E8E8</color>
 
